# searxng-search

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.local/searxng/: settings.yml
dev/: Plan.md  README.md  Spec.md  Status.md
dev/features/llama-cpp-mcp-http/: Plan.md  Spec.md  Status.md
dev/features/openai-compatible-tool-calling/: Plan.md  Spec.md
dev/research/: README.md  searxng-browser-vs-agent-surface.md
docs/: Architecture.md  Plan.md  Status.md  Validation.md
docs/development/: Status.md
docs/providers/: llama-cpp.md  overview.md
examples/llama-cpp-mcp-demo/: run-llama-cpp-mcp-demo.md
examples/openai-compatible-tool-calling/: README.md  run-llama-cpp.md  tool_calling_example.py
examples/openclaw/: README.md
skills/searxng-search/: SKILL.md
tools/: __init__.py
tools/searxng/: __init__.py  install-searxng.sh  mcp_common.py  mcp_http_server.py  mcp_server.py  search_searxng.py  uninstall-searxng.sh
