[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "searxng-search"
version = "0.0.0"
description = "Practical SearXNG search examples from browser use through tool calling and MCP."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
]

[tool.setuptools]
py-modules = []
